--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ hr {
     display: flex;
     list-style: none;
 }
-.introduction__content__box__item{
+.introduction__content__box > li{
     justify-self: center;
     padding: 10px;
 }
-.introduction__content__box__item:first-child{
+.introduction__content__box:first-child{
     padding-left: 0;
 }
 .introduction__logo {
@@ -455,7 +455,7 @@ hr {
         grid-column-gap: 10px;
         grid-row-gap: 10px;
     }
-    .introduction__content__box__item{
+    .introduction__content__box > li{
         padding: 0;
         background-color: var(--background_header_color);
         border-radius: 5px;
